--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "#Motivation\n",
-    "Why are you planning to do this analysis? \n",
-    "COVID has turned the world upside down and in this country the response varied across locales. I am interested in seeing what factors impacted different \n",
+    "COVID has turned the world upside down and in this country the response varied across locales. I am interested in seeing what factors impacted different communities case rates.\n",
     "Given the poor showing by this and other developed nations in our response to the pandemic, it will be useful from a scientific, practical and human-centered perspective to try and glean any lessons we can about what factors led communities to perform or underperform on critical metrics such as infection rate and infection fatality rate."
    ]
   },
