--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -14,11 +14,15 @@
    "metadata": {},
    "source": [
     "# Data\n",
-    "https://electionlab.mit.edu/data : county level vote counts for 2016 president\n",
-    "https://github.com/nytimes/covid-19-data : county level covid infections and fatalities by date\n",
-    "https://www.census.gov/data/datasets/time-series/demo/popest/2010s-counties-total.html : county population estimates\n",
-    "https://www.census.gov/data/datasets/2016/demo/saipe/2016-state-and-county.html : county poverty and median income estimates\n",
-    "https://www.census.gov/geographies/mapping-files/time-series/geo/kml-cartographic-boundary-files.html : county coords in case I want to explore relationships such as effect adjacent counties have on eachother or population density effect"
+    "[County level vote counts for 2016 president](https://electionlab.mit.edu/data) \n",
+    "\n",
+    "[County level covid infections and fatalities by date](https://github.com/nytimes/covid-19-data) \n",
+    "\n",
+    "[County population estimates](https://www.census.gov/data/datasets/time-series/demo/popest/2010s-counties-total.html)\n",
+    "\n",
+    "[County poverty and median income estimates](https://www.census.gov/data/datasets/2016/demo/saipe/2016-state-and-county.html)\n",
+    "\n",
+    "[County land area to establish density](https://www2.census.gov/library/publications/2011/compendia/usa-counties/excel/LND01.xls)"
    ]
   },
   {
@@ -43,11 +47,12 @@
    "metadata": {},
    "source": [
     "# Background/Existing work:\n",
-    "I haven't found this analysis performed anywhere yet, though in June the media started writing a lot about the increase of Covid cases in red states for instance:\n",
-    "https://apnews.com/article/7aa2fcf7955333834e01a7f9217c77d2\n",
-    "I did find a study similar to the one I am doing but at the state level:\n",
-    "https://www.medrxiv.org/content/10.1101/2020.10.16.20213892v2\n",
-    "https://www.washingtonpost.com/politics/2020/06/24/shift-coronavirus-primarily-red-states-is-complete-its-not-that-simple/"
+    "I haven't found this analysis performed anywhere yet, but [this study](https://www.medrxiv.org/content/10.1101/2020.10.16.20213892v2) is similar to the one I will perform only at the state level rather than county. [Here is another similar study](https://www.nature.com/articles/s41562-020-00977-7#data-availability), which looked at smartphone data to test for an association between voting for Trump and reduced social distancing. The authors established this effect, and found that it also associated to increases in infection and fatality growth rates.\n",
+    "\n",
+    "In June the media started writing a lot about the increase of Covid cases in red states. For instance, [this article](https://apnews.com/article/7aa2fcf7955333834e01a7f9217c77d2) shows red states matching blue states in new daily cases per million by mid June. Also, [here is a Washington post article](https://www.washingtonpost.com/politics/2020/06/24/shift-coronavirus-primarily-red-states-is-complete-its-not-that-simple/) from late June discussing differences in new cases in red and blue states and counties.\n",
+    "\n",
+    "[Here is an article](https://thewell.unc.edu/2020/06/22/debunking-the-partisan-narrative/) from UNC discussing potential non-partisan drivers that may have contributed to state level differences in Covid responses.\n",
+    "\n"
    ]
   },
   {
@@ -55,8 +60,23 @@
    "metadata": {},
    "source": [
     "# Methodology:\n",
-    "The most straightforward approach will be to test cumulative deaths to date in a multiple linear regression model. As a secondary approach I will examine results of the same analysis for some partial cumulatives, to see how the effect has changed over time."
+    "The most straightforward approach will be to construct a multiple linear regression model with county per capita deaths as response, and use vote proportion and the variables identified as potential confounders as regressors. This will allow for the effect of voting proportion within a county on per capita deaths due to covid to be tested while controlling for the potentially confounding variables. \n",
+    "Evidence of an effect from voting proportion on covid deaths will have changed significantly over time. For instance, the US epidemic was seeded first in major cities which tend to lean heavily democratic, and took time to spread to through the rest of the country. Also, it took time for epidemic response to become politicized and for partisan narratives to become established. Because of this it will also be interesting to perform the analysis at different periods over the last 9 months to see how the effect has changed over time. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
