add the bullets

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -14,15 +14,15 @@
    "metadata": {},
    "source": [
     "# Data\n",
-    "[County level vote counts for 2016 president](https://electionlab.mit.edu/data) \n",
+    "*[County level vote counts for 2016 president](https://electionlab.mit.edu/data) \n",
     "\n",
-    "[County level covid infections and fatalities by date](https://github.com/nytimes/covid-19-data) \n",
+    "*[County level covid infections and fatalities by date](https://github.com/nytimes/covid-19-data) \n",
     "\n",
-    "[County population estimates](https://www.census.gov/data/datasets/time-series/demo/popest/2010s-counties-total.html)\n",
+    "*[County population estimates](https://www.census.gov/data/datasets/time-series/demo/popest/2010s-counties-total.html)\n",
     "\n",
-    "[County poverty and median income estimates](https://www.census.gov/data/datasets/2016/demo/saipe/2016-state-and-county.html)\n",
+    "*[County poverty and median income estimates](https://www.census.gov/data/datasets/2016/demo/saipe/2016-state-and-county.html)\n",
     "\n",
-    "[County land area to establish density](https://www2.census.gov/library/publications/2011/compendia/usa-counties/excel/LND01.xls)"
+    "*[County land area to establish density](https://www2.census.gov/library/publications/2011/compendia/usa-counties/excel/LND01.xls)"
    ]
   },
   {
@@ -69,7 +69,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#global config\n",
+    "ALWAYS_REFRESH = False\n",
+    "\n",
+    "#imports\n",
+    "import pandas as pd\n",
+    "import urllib\n",
+    "from os import path\n",
+    "\n",
+    "COUNTY_COVID_URL = 'https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-counties.csv'\n",
+    "COUNTY_COVID_CSV = 'county_covid.csv'\n",
+    "COUNTY_POPULATION_ESTIMATES_URL = 'https://www2.census.gov/programs-surveys/popest/datasets/2010-2019/counties/totals/co-est2019-alldata.csv'\n",
+    "COUNTY_POPULATION_CSV = 'county_population.csv'\n",
+    "COUNTY_VOTES_URL = 'https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/VOQCHQ#'\n",
+    "COUNTY_VOTES_CSV = 'county_votes_2016.csv'\n",
+    "\n",
+    "def download_file(url, fname,overwrite=False):\n",
+    "    if overwrite or not path.exists(fname):\n",
+    "        urllib.request.urlretrieve(url, fname)\n",
+    "\n",
+    "download_file(COUNTY_COVID_URL, COUNTY_COVID_CSV, ALWAYS_REFRESH)\n",
+    "download_file(COUNTY_POPULATION_ESTIMATES_URL, COUNTY_POPULATION_CSV)\n",
+    "download_file(COUNTY_VOTES_URL, COUNTY_VOTES_CSV)\n",
+    "\n",
+    "county_covid_df = pd.read_csv(COUNTY_COVID_CSV, sep = ',', dtype= {'fips': str})\n",
+    "\n",
+    "county_population_df = pd.read_csv(COUNTY_POPULATION_CSV, sep = ',', encoding = \"ISO-8859-1\", dtype= {'STATE': str, 'COUNTY': str})\n",
+    "county_population_df['fips'] = county_population_df['STATE']+county_population_df['COUNTY']\n",
+    "county_population_df = county_population_df[['fips', 'POPESTIMATE2019']]\n",
+    "\n",
+    "county_votes_df = pd.read_csv(COUNTY_VOTES_CSV, sep = ',', dtype= {'STATE': str, 'COUNTY': str})\n",
+    "\n",
+    "most_recent_county_covid_data = list(county_covid_df.groupby(county_covid_df['date']))[-1:][0][1]\n",
+    "\n",
+    "def merge_tables(covid, population):\n",
+    "    return covid.merge(\n",
+    "    population, on='fips', how=\"inner\")\n",
+    "t_step_1_merge = merge_tables(most_recent_county_covid_data, county_population_df)\n",
+    "print(t_step_1_merge)"
+   ]
   },
   {
    "cell_type": "code",
